@@ -1,4 +1,9 @@
 2009-08-30
+- added taskbar_active_background_id to change current desktop background.
+  warning : this feature have a price on cpu (tint2 redraw all task) when you switch desktop.
+  comment out taskbar_active_background_id if you don't want it.
+
+2009-08-30
 - fixed issue 130 by maato
   ordered systray icon with config "systray_sort = asc/desc"
 
